@@ -21,6 +21,8 @@ class ALoaderMenuPanel : public AVRMenuPanel
 public:
 	virtual void OnConstruction(const FTransform& Transform) override;
 
+	virtual void BeginPlay() override;
+
 	UPROPERTY(EditAnywhere)
 	TSubclassOf<UVolumeLoadMenu> LoaderMenuClass;
 
